--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+* {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+
 nav {
     margin: 0 auto;
     padding: 0;
@@ -13,5 +24,8 @@ nav ul li:first-child { float: left; }
 nav ul li {
     display: inline;
     float: right;
-    margin-right: 1ch;
+}
+
+nav ul li:not(:nth-child(-n+2))::after {
+    content: ' |';
 }
